# BespinMod

./: BespinMod.bespin  BespinMod.colors
cloudcity/: .directory  CMakeLists.txt  INSTALL  PKGBUILD  bespin.cpp  bespin.cpp~  bespin.cpp~.orig  bespin.h  bespin.h~  bespin.pro  bespin.themerc  builddeb.sh  buttons.cpp  config.defaults  config.h  configure  docks.cpp  draw.h  frames.cpp  genpixmaps.cpp  hacks.cpp  hacks.h  init.cpp  input.cpp  input.cpp~  input.cpp~.orig  macmenu  macmenu.cpp  macmenu.cpp.orig  macmenu.h  polish.cpp  qmake.pro  qsubcmetrics.cpp  scrollareas.cpp  shiftgradients-r70.sh  sizefromcontents.cpp  slider.cpp  slider.cpp~  splitterproxy.h  stylehint.cpp.orig  (+11 more)
cloudcity/.svn/: entries
cloudcity/XBar/: main.cpp  menubar.h  xbar.cpp  xbar.katesessions.sh
cloudcity/XBar/.svn/: all-wcprops  entries
cloudcity/XBar/.svn/text-base/: CMakeLists.txt.svn-base  MainMenu.xml.svn-base  dbus.h.svn-base  menubar.cpp.svn-base  plasma-applet-xbar.desktop.svn-base  xbar.h.svn-base  xbar.txt.svn-base
cloudcity/XBar/MainMenu/.svn/: all-wcprops  entries
cloudcity/animator/: tab.cpp
cloudcity/animator/.svn/: all-wcprops  entries
cloudcity/animator/.svn/text-base/: basic.cpp.svn-base  hover.cpp.svn-base  tab.h.svn-base
cloudcity/blib/: FX.h  elements.cpp  gradients.cpp  shapes.cpp  shapes.cpp~  shapes.cpp~.orig  tileset.cpp
cloudcity/blib/.svn/: all-wcprops  entries
cloudcity/bootsplash/: generate.sh
cloudcity/bootsplash/.svn/: all-wcprops  entries
cloudcity/build.orig/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  moc_bespin.cxx  moc_hacks.cxx  moc_macmenu-dbus.cxx  moc_macmenu.cxx  moc_visualframe.cxx
cloudcity/build.orig/XBar/: Makefile  cmake_install.cmake  moc_menubar.cpp  plasma_applet_xbar_automoc.cpp.files
cloudcity/build.orig/animator/: moc_aprogress.cxx  moc_basic.cxx  moc_hover.cxx  moc_hoverindex.cxx  moc_tab.cxx
cloudcity/build.orig/blib/: Makefile  cmake_install.cmake
cloudcity/build.orig/config/: Makefile  bespin  cmake_install.cmake  kstyle_bespin_config_automoc.cpp  kstyle_bespin_config_automoc.cpp.files  moc_bconfig.cpp  moc_bconfig.cxx  moc_config.cpp  moc_config.cxx  moc_dialog.cxx  ui_config.h  ui_uiDemo.h
cloudcity/build.orig/kwin/: Makefile  cmake_install.cmake  factory.moc  kwin3_bespin_automoc.cpp  kwin3_bespin_automoc.cpp.files  kwin_bespin_config_automoc.cpp.files  moc_button.cpp  moc_resizecorner.cpp
cloudcity/config/: bconfig.cpp  bconfig.h  config.cpp  config.pro  dialog.h  kdeini.h  main.cpp
cloudcity/config/.svn/: all-wcprops  entries
cloudcity/debian-upstream/: copyright  manpages
cloudcity/debian-upstream/.svn/: all-wcprops  entries
cloudcity/extras/: README  bespin-compl  default-theme-clean.svg.bz2  kde_infopage.css
cloudcity/extras/.svn/: all-wcprops  entries
cloudcity/extras/k3b/: k3b.theme  splash.xcf
cloudcity/icons.orig/: alias.txt  license.txt
cloudcity/icons/.svn/: all-wcprops  entries
cloudcity/kdm/.svn/: all-wcprops  entries
cloudcity/kdm/aperture/: aperture_4_3.xml
cloudcity/kdm/tibanna/: KdmGreeterTheme.desktop
cloudcity/ksplash/.svn/: all-wcprops  entries
cloudcity/kwin/: button.cpp  button.cpp~  button.cpp~.orig  button.h  client.cpp  client.cpp.orig  client.cpp~  client.h~.orig  config.cpp  configdialog.ui  dbus.h  factory.cpp~.orig  resizecorner.cpp
cloudcity/kwin/.svn/: all-wcprops  entries
cloudcity/man/: bespin.1
cloudcity/man/.svn/: all-wcprops  entries
cloudcity/presets/: cnn.bespin  coruscant.bespin  elegance.bespin  iron.bespin  itunes7.bespin  lightroom.bespin  marble.bespin  matrix.bespin  mustafar.bespin  opera10.bespin  screenshot.bespin  slickness.bespin
cloudcity/presets/.svn/: all-wcprops  entries
cloudcity/presets/cupertino/: cupertino.100g.bespin  cupertino.103a.bespin  cupertino.103b.bespin  cupertino.105g.bespin
cloudcity/presets/maxR/: max.alloy.smog.bespin  max.alloy.toxic.bespin  max.alloy.volcanic.bespin  max.bbxmercury.bespin  max.milk.bespin
cloudcity/presets/redmond/: redmond.3x.bespin  redmond.9x.bespin  redmond.longhorn.bespin  redmond.o2007.bespin  redmond.slate.bespin  redmond.vista.bespin
(+112 files in other folders)
